update pipeline.yml for test repo

--- a/concourse/pipeline.yml
+++ b/concourse/pipeline.yml
@@ -3,7 +3,7 @@ resources:
 - name: ci-repo
   type: git
   source:
-    uri: https://github.com/gschultzy/ci-repo.git
+    uri: https://github.com/gschultzy/test-repo #test repo
 
 - name: ci-project
   type: git
