--- a/concourse/pipeline.yml
+++ b/concourse/pipeline.yml
@@ -10,15 +10,15 @@ resources:
   source:
     uri: https://github.com/gschultzy/ci-project.git
 
-- name: resource-deploy-web-app
-  type: cf
-  source:
-    api: {{cf-api}}
-    username: {{cf-username}}
-    password: {{cf-password}}
-    organization: {{cf-organization}}
-    space: {{cf-space}}
-    skip_cert_check: true
+# - name: resource-deploy-web-app
+#   type: cf
+#   source:
+#     api: {{cf-api}}
+#     username: {{cf-username}}
+#     password: {{cf-password}}
+#     organization: {{cf-organization}}
+#     space: {{cf-space}}
+#     skip_cert_check: true
 
 jobs:
 - name: ci-project-web-app
@@ -30,7 +30,7 @@ jobs:
     trigger: true
   - task: web-app-tests
     file: ci-repo/concourse/task_run_tests.yml
-  - put: resource-deploy-web-app
-    params:
-      manifest: ci-project/manifest.yml
-      path: ci-project
+  # - put: resource-deploy-web-app
+  #   params:
+  #     manifest: ci-project/manifest.yml
+  #     path: ci-project
