--- a/concourse/task_run_tests.yml
+++ b/concourse/task_run_tests.yml
@@ -10,4 +10,12 @@ inputs:
 - name: ci-project
 
 run:
-  path: ci-repo/concourse/task_run_tests.sh
+  # path: ci-repo/concourse/task_run_tests.sh
+  path: sh
+  args:
+  - -exc
+  - |
+    whoami
+    env
+    ls -al
+    
