task_run_tests.yml updates

--- a/concourse/task_run_tests.yml
+++ b/concourse/task_run_tests.yml
@@ -19,4 +19,4 @@ run:
     whoami
     env
     chmod +x ci-repo/concourse/task_run_tests.sh
-    ./task_run_tests.sh
+    ci-repo/concourse/task_run_tests.sh
