--- a/concourse/task_run_tests.yml
+++ b/concourse/task_run_tests.yml
@@ -3,7 +3,7 @@ platform: linux
 
 image_resource:
   type: docker-image
-  source: {repository: ubuntu, tag: "14.04"}
+  source: {repository: node, tag: "boron"}
 
 inputs:
 - name: ci-repo
