--- a/concourse/task_run_tests.yml
+++ b/concourse/task_run_tests.yml
@@ -12,6 +12,9 @@ inputs:
 # - name: ci-project
   # path: ci-project/
 
+params:
+  greg: test.date
+
 run:
   # path: ci-repo/concourse/task_run_tests.sh
   path: sh
@@ -19,6 +22,7 @@ run:
   - -exc
   - |
     whoami
+    uname -a
     env
     chmod +x ci-repo/concourse/task_run_tests.sh
     ci-repo/concourse/task_run_tests.sh
