--- a/concourse/task_run_tests.yml
+++ b/concourse/task_run_tests.yml
@@ -12,8 +12,8 @@ inputs:
 # - name: ci-project
   # path: ci-project/
 
-params:
-  greg: test.date
+# params:
+#   greg: test.date
 
 run:
   # path: ci-repo/concourse/task_run_tests.sh
