--- a/concourse/pipeline.yml
+++ b/concourse/pipeline.yml
@@ -10,15 +10,15 @@ resources:
   source:
     uri: https://github.com/gschultzy/ci-project.git
 
-# - name: resource-deploy-web-app
-#   type: cf
-#   source:
-#     api: {{cf-api}}
-#     username: {{cf-username}}
-#     password: {{cf-password}}
-#     organization: {{cf-organization}}
-#     space: {{cf-space}}
-#     skip_cert_check: true
+- name: resource-deploy-web-app
+  type: cf
+  source:
+    api: {{cf-api}}
+    username: {{cf-username}}
+    password: {{cf-password}}
+    organization: {{cf-organization}}
+    space: {{cf-space}}
+    skip_cert_check: true
 
 jobs:
 - name: ci-project-web-app
@@ -28,6 +28,12 @@ jobs:
   - get: ci-repo
   - get: ci-project
     trigger: true
+
+  - put: resource-deploy-web-app
+    params:
+      manifest: ci-project/manifest.yml
+      path: ci-project
+
   - task: web-app-tests
     file: ci-repo/concourse/task_run_tests.yml
     params:
@@ -39,7 +45,3 @@ jobs:
       skip_cert_check: true
       appname: {{app-name}}
 
-  # - put: resource-deploy-web-app
-  #   params:
-  #     manifest: ci-project/manifest.yml
-  #     path: ci-project
