--- a/concourse/pipeline.yml
+++ b/concourse/pipeline.yml
@@ -10,30 +10,32 @@ resources:
   source:
     uri: https://github.com/gschultzy/ci-project.git
 
-# - name: resource-deploy-web-app
-#   type: cf
-#   source:
-#     api: {{cf-api}}
-#     username: {{cf-username}}
-#     password: {{cf-password}}
-#     organization: {{cf-organization}}
-#     space: {{cf-space}}
-#     skip_cert_check: true
+- name: resource-deploy-web-app
+  type: cf
+  source:
+    api: {{cf-api}}
+    username: {{cf-username}}
+    password: {{cf-password}}
+    organization: {{cf-organization}}
+    space: {{cf-space}}
+    skip_cert_check: true
 
 jobs:
 - name: ci-project-web-app
   public: true
   serial: true
+  
   plan:
+  # Get required resources
   - get: ci-repo
   - get: ci-project
     trigger: true
-
-  # - put: resource-deploy-web-app
-  #   params:
-  #     manifest: ci-project/manifest.yml
-  #     path: ci-project
-
+  # Deploy app to cf
+  - put: resource-deploy-web-app
+    params:
+      manifest: ci-project/manifest.yml
+      path: ci-project
+  # run unit and integration tests
   - task: web-app-tests
     file: ci-repo/concourse/task_run_tests.yml
     params:
